--- a/package.json
+++ b/package.json
@@ -8,21 +8,24 @@
   },
   "dependencies": {
     "immutable": "^3.8.2",
-    "react": "16.2.0",
-    "react-native": "0.52.2",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
+    "react": "16.8.4",
+    "react-native": "0.59.4",
+    "react-redux": "^7.0.2",
+    "redux": "^4.0.1",
     "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-observable": "^0.17.0",
-    "reselect": "^3.0.1",
-    "rxjs": "^5.5.6"
+    "redux-observable": "^1.1.0",
+    "reselect": "^4.0.0",
+    "rxjs": "^6.4.0"
   },
   "devDependencies": {
-    "babel-jest": "22.1.0",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "22.1.4",
-    "react-test-renderer": "16.2.0"
+    "@babel/core": "^7.4.3",
+    "@babel/runtime": "^7.4.3",
+    "babel-jest": "^24.7.1",
+    "babel-preset-react-native": "^4.0.1",
+    "jest": "24.7.1",
+    "metro-react-native-babel-preset": "^0.53.1",
+    "react-test-renderer": "16.8.3"
   },
   "jest": {
     "preset": "react-native"
